--- a/my-app-main/package.json
+++ b/my-app-main/package.json
@@ -21,9 +21,11 @@
     "react-bootstrap-icons": "^1.11.6",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-organizational-chart": "^2.2.1",
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^7.6.0",
     "react-toastify": "^11.0.5",
+    "styled-components": "^6.1.19",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
