--- a/backend-main/backend-main/vercel.json
+++ b/backend-main/backend-main/vercel.json
@@ -13,8 +13,6 @@
     }
   ],
   "env": {
-    "NODE_ENV": "production",
-    "DATABASE_URL": "@database_url",
-    "JWT_SECRET": "@jwt_secret"
+    "NODE_ENV": "production"
   }
 }
