--- a/backend-main/backend-main/config/config.json
+++ b/backend-main/backend-main/config/config.json
@@ -16,7 +16,6 @@
     "port": 5432
   },
   "production": {
-  
     "use_env_variable": "DATABASE_URL",
     "dialect": "postgres",
     "dialectOptions": { 
@@ -24,6 +23,7 @@
         "require": true,
         "rejectUnauthorized": false
       }
-    }
+    },
+    "logging": false
   }
 }
