--- a/backend-main/backend-main/vercel.json
+++ b/backend-main/backend-main/vercel.json
@@ -1,15 +1,16 @@
 {
-  "version": 2,
-  "builds": [
+  "rewrites": [
     {
-      "src": "index.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
+      "source": "/api/auth/login",
+      "destination": "/api/login"
+    },
     {
-      "src": "/(.*)",
-      "dest": "/index.js"
+      "source": "/api/applicants/stats",
+      "destination": "/api/stats"
+    },
+    {
+      "source": "/",
+      "destination": "/api/index"
     }
   ]
 }
