--- a/backend-main/backend-main/package.json
+++ b/backend-main/backend-main/package.json
@@ -5,7 +5,8 @@
   "main": "api/index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
+    "dev": "node server-local.js",
+    "local": "node server-local.js",
     "build": "echo 'No build step required'",
     "vercel-build": "echo 'Ready for deployment'",
     "test": "echo \"Error: no test specified\" && exit 1"
