--- a/my-app-main/package.json
+++ b/my-app-main/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.7",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "dompurify": "^3.2.3",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
