--- a/my-app-main/.env.production
+++ b/my-app-main/.env.production
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=https://backend-main-ogxpx599n-zidan-bagus-setiawans-projects.vercel.app/api
+VITE_API_BASE_URL=https://your-project.supabase.co/functions/v1
