--- a/my-app-main/package.json
+++ b/my-app-main/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^4.4.7",
     "chartjs-plugin-datalabels": "^2.2.0",
     "react-organizational-chart": "^2.2.1",
+    "styled-components": "^6.1.8",
     "dompurify": "^3.2.3",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
