--- a/railway-backend/package.json
+++ b/railway-backend/package.json
@@ -15,7 +15,9 @@
     "pg-hstore": "^2.3.4",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "multer": "^1.4.5-lts.1",
+    "xlsx": "^0.18.5"
   },
   "engines": {
     "node": ">=18.0.0"
