--- a/railway-backend/package.json
+++ b/railway-backend/package.json
@@ -1,25 +1,21 @@
 {
-  "name": "spk-beasiswa-railway",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "SPK Beasiswa Backend on Railway",
-  "main": "index.js",
+  "description": "",
+  "main": "api/index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node server.js",
+    "dev": "node server-local.js",
+    "local": "node server-local.js",
+    "build": "echo 'No build step required'",
+    "vercel-build": "echo 'Ready for deployment'",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2",
     "cors": "^2.8.5",
-    "sequelize": "^6.37.3",
-    "pg": "^8.11.3",
-    "pg-hstore": "^2.3.4",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.4.5",
-    "multer": "^1.4.5-lts.1",
-    "xlsx": "^0.18.5"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "express": "^4.19.2"
   }
 }
