--- a/railway-backend/package.json
+++ b/railway-backend/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "api/index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all && node server.js",
     "dev": "node server-local.js",
     "local": "node server-local.js",
-    "build": "echo 'No build step required'",
+    "build": "npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all",
     "vercel-build": "echo 'Ready for deployment'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,6 +24,7 @@
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
+    "sequelize-cli": "^6.6.2",
     "xlsx": "^0.18.5"
   }
 }
