fix: Remove database operations from build script

--- a/railway-backend/package.json
+++ b/railway-backend/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js",
     "dev": "node server-local.js",
     "local": "node server-local.js",
-    "build": "npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all",
+    "build": "echo 'Build completed'",
     "vercel-build": "echo 'Ready for deployment'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
